# aaa

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  run-due-jobs.yml
docs/: architecture_upgrade_plan.md  codex_execution_log.md  datalab_1_0_scope.md  datalab_architecture.md  release_quality_gates.md  security_hardening_report.md  ui_design_system.md  vulnerability_closure_report.md
docs/agent_math/: README.md  formal_system.md  (+16 more)
frontend-spa/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: compare_model_engines.py  export_monte_carlo_data_lab.py  export_monte_carlo_optimization_lab.py  export_monte_carlo_site_audit.py  finalize_unified_monte_carlo.py  run_missing_data_lab_models.py  run_unified_monte_carlo.py  scan_repo_hygiene.py  session_auth.py  spa_dist_manifest.py  verify_access_gate.py  verify_agent_quality_gate.py  verify_case_workspace.py  verify_data_lab.py  verify_data_lab_full.py  verify_deploy_artifacts.py  verify_model_upgrade.py  verify_optimization_lab.py  verify_provider_center.py  verify_public_monitor.py  verify_public_sources.py  verify_render_deploy.py  verify_security_and_literature.py  verify_workbench_and_knowledge.py  write_engineering_gate_artifact.py
tests/: conftest.py  test_agent_math_v2.py  test_agent_runtime.py  test_agent_runtime_api.py  test_asgi_entrypoint.py  test_asgi_static_security.py  test_auth_and_audit.py  test_auth_cookie_security.py  test_data_lab_agent.py  test_data_lab_agent_risk_boundary.py  test_data_lab_and_paper_library.py  test_data_lab_backend_extraction.py  test_data_lab_history_lineage.py  test_data_lab_model_correctness.py  test_data_lab_model_preflight.py  test_data_lab_preparation_preview.py  test_data_lab_result_manifest.py  test_delivery_review.py  test_deploy_verification.py  test_legacy_lab_compat.py  test_local_runtime.py  test_math_model_integrity.py  test_optimization_lab_correctness.py  test_optimization_lab_limits.py  test_repo_hygiene.py  test_security_baseline.py  test_upload_and_download.py  test_upload_security.py  test_workbench_overview.py  test_workflow_round2.py
蒙特卡洛/: README.md  comparison_report.json  notes.md  verification_report.json
(+1352 files in other folders)
