[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "Academic research agent for literature discovery, synthesis, and citation export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "markdown>=3.7",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "supabase>=2.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
research-agent = "research_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
