[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "Academic research agent for literature discovery, synthesis, and citation export."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "arviz>=0.22.0",
    "causalpy>=0.8.0",
    "cryptography>=45.0.0",
    "fastapi>=0.115.0",
    "linearmodels>=7.0",
    "matplotlib>=3.9.0",
    "markdown>=3.7",
    "mealpy>=3.0.3",
    "pymc>=5.20.0",
    "PyPortfolioOpt>=1.5.5",
    "statsmodels>=0.14.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "opfunu>=1.0.1",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pymupdf>=1.24.0",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "scipy>=1.13.0",
    "setuptools<81",
    "sqlalchemy>=2.0.0",
    "supabase>=2.0.0",
    "typer>=0.12.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
quant-tree = [
    "catboost>=1.2.0",
    "lightgbm>=4.0.0",
]

[project.scripts]
research-agent = "research_agent.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
